syntax = "proto3";

package flare.common.v1;

// 统一错误码定义，覆盖通信核心层常见错误类型
enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_OK = 1;
  ERROR_CODE_INVALID_ARGUMENT = 2;
  ERROR_CODE_UNAUTHENTICATED = 3;
  ERROR_CODE_PERMISSION_DENIED = 4;
  ERROR_CODE_NOT_FOUND = 5;
  ERROR_CODE_CONFLICT = 6;
  ERROR_CODE_RATE_LIMITED = 7;
  ERROR_CODE_INTERNAL = 8;
  ERROR_CODE_UNAVAILABLE = 9;
  ERROR_CODE_TIMEOUT = 10;
}

// 统一 RPC 状态，附带可扩展详情
message RpcStatus {
  ErrorCode code = 1;
  string message = 2;
  map<string, string> details = 3;
}

