syntax = "proto3";








































































































































































































































































package flare.communication_core.v1;

import "google/protobuf/timestamp.proto";
import "common/errors.proto";
import "common/metadata.proto";

// 通信核心层统一服务
service CommunicationCore {
  // 信令相关
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetOnlineStatus(GetOnlineStatusRequest) returns (GetOnlineStatusResponse);
  rpc RouteMessage(RouteMessageRequest) returns (RouteMessageResponse);
  
  // 推送相关
  rpc PushMessage(PushMessageRequest) returns (PushMessageResponse);
  rpc PushNotification(PushNotificationRequest) returns (PushNotificationResponse);
  
  // 存储相关
  rpc StoreMessage(StoreMessageRequest) returns (StoreMessageResponse);
  rpc QueryMessages(QueryMessagesRequest) returns (QueryMessagesResponse);
  
  // 媒体相关
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc GetFileUrl(GetFileUrlRequest) returns (GetFileUrlResponse);
  rpc GetFileInfo(GetFileInfoRequest) returns (GetFileInfoResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc ProcessImage(ProcessImageRequest) returns (ProcessImageResponse);
  rpc ProcessVideo(ProcessVideoRequest) returns (ProcessVideoResponse);
}

// 登录请求
message LoginRequest {
  string user_id = 1;
  string token = 2;
  string device_id = 3;
  map<string, string> metadata = 4;
  flare.common.v1.RequestContext context = 5;
  flare.common.v1.TenantContext tenant = 6;
}

// 登录响应
message LoginResponse {
  bool success = 1;
  string session_id = 2;
  string error_message = 3;
  flare.common.v1.RpcStatus status = 4;
}

// 在线状态查询请求
message GetOnlineStatusRequest {
  repeated string user_ids = 1;
  flare.common.v1.RequestContext context = 2;
  flare.common.v1.TenantContext tenant = 3;
}

// 在线状态查询响应
message GetOnlineStatusResponse {
  map<string, OnlineStatus> statuses = 1;
  flare.common.v1.RpcStatus status = 2;
}

// 在线状态
message OnlineStatus {
  bool online = 1;
  string server_id = 2;
  google.protobuf.Timestamp last_seen = 3;
  flare.common.v1.TenantContext tenant = 4;
}

// 路由消息请求
message RouteMessageRequest {
  string user_id = 1;
  string svid = 2;  // Service ID
  bytes payload = 3;
  flare.common.v1.RequestContext context = 4;
  flare.common.v1.TenantContext tenant = 5;
}

// 路由消息响应
message RouteMessageResponse {
  bool success = 1;
  bytes response = 2;
  string error_message = 3;
  flare.common.v1.RpcStatus status = 4;
}

// 推送消息请求
message PushMessageRequest {
  repeated string user_ids = 1;
  Message message = 2;
  PushOptions options = 3;
  flare.common.v1.RequestContext context = 4;
  flare.common.v1.TenantContext tenant = 5;
}

// 推送消息响应
message PushMessageResponse {
  int32 success_count = 1;
  int32 fail_count = 2;
  repeated string failed_user_ids = 3;
  repeated PushFailure failures = 4;
  flare.common.v1.RpcStatus status = 5;
}

// 推送通知请求
message PushNotificationRequest {
  repeated string user_ids = 1;
  Notification notification = 2;
  PushOptions options = 3;
  flare.common.v1.RequestContext context = 4;
  flare.common.v1.TenantContext tenant = 5;
}

// 推送通知响应
message PushNotificationResponse {
  int32 success_count = 1;
  int32 fail_count = 2;
  repeated PushFailure failures = 3;
  flare.common.v1.RpcStatus status = 4;
}

message PushFailure {
  string user_id = 1;
  flare.common.v1.ErrorCode code = 2;
  string error_message = 3;
}

// 存储消息请求
message StoreMessageRequest {
  string session_id = 1;
  Message message = 2;
  bool sync = 3;
  flare.common.v1.RequestContext context = 4;
  flare.common.v1.TenantContext tenant = 5;
  map<string, string> tags = 6;
}

// 存储消息响应
message StoreMessageResponse {
  bool success = 1;
  string message_id = 2;
  string error_message = 3;
  flare.common.v1.RpcStatus status = 4;
}

// 查询消息请求
message QueryMessagesRequest {
  string session_id = 1;
  int64 start_time = 2;
  int64 end_time = 3;
  int32 limit = 4;
  string cursor = 5;
  flare.common.v1.RequestContext context = 6;
  flare.common.v1.TenantContext tenant = 7;
  flare.common.v1.Pagination pagination = 8;
}

// 查询消息响应
message QueryMessagesResponse {
  repeated Message messages = 1;
  string next_cursor = 2;
  bool has_more = 3;
  flare.common.v1.Pagination pagination = 4;
  flare.common.v1.RpcStatus status = 5;
}

// 消息
message Message {
  string id = 1;
  string session_id = 2;
  string sender_id = 3;
  string sender_type = 4;  // user/agent/ai_bot
  repeated string receiver_ids = 5;
  string receiver_id = 6;  // 单聊接收者ID
  MessageContent content = 7;
  google.protobuf.Timestamp timestamp = 8;
  MessageType message_type = 9;
  BusinessType business_type = 10;
  string session_type = 11;  // single/group/cs/ai
  string status = 12;  // sent/delivered/read
  map<string, string> extra = 13;
  
  // 消息操作相关字段（与 storage.proto 保持一致）
  bool is_recalled = 14;
  google.protobuf.Timestamp recalled_at = 15;
  bool is_burn_after_read = 16;
  int32 burn_after_seconds = 17;
  flare.common.v1.TenantContext tenant = 18;
  repeated flare.common.v1.MediaAttachment attachments = 19;
  flare.common.v1.AuditContext audit = 20;
}

// 消息内容
message MessageContent {
  oneof content {
    TextContent text = 1;
    RichTextContent rich_text = 2;
    ImageContent image = 3;
    VideoContent video = 4;
    AudioContent audio = 5;
    FileContent file = 6;
    StickerContent sticker = 7;
    LocationContent location = 8;
    CardContent card = 9;
    CommandContent command = 10;
    EventContent event = 11;
    SystemContent system = 12;
    CustomContent custom = 13;
    bytes binary = 14; // 兼容旧格式
    string json = 15;  // 兼容旧格式
  }
}

message TextContent {
  string text = 1;
  repeated Mention mentions = 2;
}

message Mention {
  string user_id = 1;
  int32 start = 2;
  int32 length = 3;
}

message RichTextContent {
  string text = 1;
  repeated RichTextSpan spans = 2;
  repeated Mention mentions = 3;
}

message RichTextSpan {
  int32 start = 1;
  int32 length = 2;
  RichTextStyle style = 3;
  string url = 4; // 对于链接类 span
}

enum RichTextStyle {
  RICH_TEXT_STYLE_UNSPECIFIED = 0;
  RICH_TEXT_STYLE_BOLD = 1;
  RICH_TEXT_STYLE_ITALIC = 2;
  RICH_TEXT_STYLE_UNDERLINE = 3;
  RICH_TEXT_STYLE_STRIKETHROUGH = 4;
  RICH_TEXT_STYLE_MONOSPACE = 5;
  RICH_TEXT_STYLE_INLINE_CODE = 6;
  RICH_TEXT_STYLE_LINK = 7;
  RICH_TEXT_STYLE_QUOTE = 8;
}

message ImageContent {
  string file_id = 1;
  string url = 2;
  string thumbnail_url = 3;
  int32 width = 4;
  int32 height = 5;
  string format = 6;
}

message VideoContent {
  string file_id = 1;
  string url = 2;
  string cover_url = 3;
  int32 duration_ms = 4;
  int32 width = 5;
  int32 height = 6;
  string format = 7;
}

message AudioContent {
  string file_id = 1;
  string url = 2;
  int32 duration_ms = 3;
  bool voice = 4;
  string format = 5;
}

message FileContent {
  string file_id = 1;
  string url = 2;
  string file_name = 3;
  int64 size = 4;
  string mime_type = 5;
  string checksum = 6;
}

message StickerContent {
  string sticker_id = 1;
  string pack_id = 2;
  string emoji = 3;
  string url = 4;
}

message LocationContent {
  double latitude = 1;
  double longitude = 2;
  string name = 3;
  string address = 4;
  string description = 5;
}

message CardContent {
  string card_type = 1;
  string title = 2;
  string subtitle = 3;
  string summary = 4;
  string url = 5;
  map<string, string> fields = 6;
}

message CommandContent {
  string command = 1;
  map<string, string> params = 2;
  bool display = 3;
}

message EventContent {
  string event_type = 1;
  map<string, string> data = 2;
}

message SystemContent {
  string title = 1;
  string body = 2;
  map<string, string> metadata = 3;
}

message CustomContent {
  string type = 1;
  string json_payload = 2;
  bytes binary_payload = 3;
  map<string, string> metadata = 4;
}

// 消息类型
enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_TEXT = 1;
  MESSAGE_TYPE_RICH_TEXT = 2;
  MESSAGE_TYPE_IMAGE = 3;
  MESSAGE_TYPE_VIDEO = 4;
  MESSAGE_TYPE_AUDIO = 5;
  MESSAGE_TYPE_FILE = 6;
  MESSAGE_TYPE_STICKER = 7;
  MESSAGE_TYPE_LOCATION = 8;
  MESSAGE_TYPE_CARD = 9;
  MESSAGE_TYPE_COMMAND = 10;
  MESSAGE_TYPE_EVENT = 11;
  MESSAGE_TYPE_SYSTEM = 12;
  MESSAGE_TYPE_CUSTOM = 13;
}

// 业务类型
enum BusinessType {
  SINGLE_CHAT = 0;
  GROUP_CHAT = 1;
  CUSTOMER_SERVICE = 2;
  AI_BOT = 3;
  OTHER = 4;
}

// 推送选项
message PushOptions {
  bool require_online = 1;
  bool persist_if_offline = 2;
  int32 priority = 3;
  map<string, string> metadata = 4;
}

// 通知
message Notification {
  NotificationType type = 1;
  NotificationContent content = 2;
  map<string, string> metadata = 3;
}

enum NotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_TYPE_CONVERSATION = 1;
  NOTIFICATION_TYPE_STATUS = 2;
  NOTIFICATION_TYPE_GROUP = 3;
  NOTIFICATION_TYPE_FRIEND = 4;
  NOTIFICATION_TYPE_SYSTEM = 5;
  NOTIFICATION_TYPE_SECURITY = 6;
  NOTIFICATION_TYPE_DEVICE = 7;
  NOTIFICATION_TYPE_CUSTOM = 8;
}

message NotificationContent {
  oneof content {
    ConversationNotification conversation = 1;
    StatusNotification status = 2;
    GroupNotification group = 3;
    FriendNotification friend = 4;
    SystemNotification system = 5;
    SecurityNotification security = 6;
    DeviceNotification device = 7;
    CustomNotification custom = 8;
  }
}

message ConversationNotification {
  string conversation_id = 1;
  string summary = 2;
  bool mention_me = 3;
}

message StatusNotification {
  string user_id = 1;
  string status = 2;
  string description = 3;
}

message GroupNotification {
  string group_id = 1;
  string title = 2;
  string body = 3;
  map<string, string> data = 4;
}

message FriendNotification {
  string user_id = 1;
  string action = 2;
  string message = 3;
}

message SystemNotification {
  string title = 1;
  string body = 2;
  map<string, string> data = 3;
}

message SecurityNotification {
  string title = 1;
  string body = 2;
  string severity = 3;
  map<string, string> data = 4;
}

message DeviceNotification {
  string device_id = 1;
  string action = 2;
  map<string, string> data = 3;
}

message CustomNotification {
  string type = 1;
  string json_payload = 2;
  bytes binary_payload = 3;
  map<string, string> data = 4;
}

// 媒体服务请求/响应（转发到媒体服务）
message UploadFileRequest {
  oneof request {
    UploadFileMetadata metadata = 1;
    bytes chunk_data = 2;
  }
}

message UploadFileMetadata {
  string file_name = 1;
  string mime_type = 2;
  int64 file_size = 3;
  int32 file_type = 4;  // FileType enum value
  string upload_id = 5;
  flare.common.v1.RequestContext context = 6;
  flare.common.v1.TenantContext tenant = 7;
  map<string, string> tags = 8;
}

message UploadFileResponse {
  string file_id = 1;
  string url = 2;
  string cdn_url = 3;
  bool success = 4;
  string error_message = 5;
  flare.common.v1.RpcStatus status = 6;
}

message GetFileUrlRequest {
  string file_id = 1;
  int32 expires_in = 2;
  flare.common.v1.RequestContext context = 3;
  flare.common.v1.TenantContext tenant = 4;
}

message GetFileUrlResponse {
  string url = 1;
  string cdn_url = 2;
  google.protobuf.Timestamp expires_at = 3;
  bool success = 4;
  string error_message = 5;
  flare.common.v1.RpcStatus status = 6;
}

message GetFileInfoRequest {
  string file_id = 1;
  flare.common.v1.RequestContext context = 2;
  flare.common.v1.TenantContext tenant = 3;
}

message GetFileInfoResponse {
  string file_id = 1;
  string file_name = 2;
  string mime_type = 3;
  int64 size = 4;
  string url = 5;
  string cdn_url = 6;
  google.protobuf.Timestamp created_at = 7;
  bool success = 8;
  string error_message = 9;
  flare.common.v1.TenantContext tenant = 10;
  flare.common.v1.RpcStatus status = 11;
}

message DeleteFileRequest {
  string file_id = 1;
  flare.common.v1.RequestContext context = 2;
  flare.common.v1.TenantContext tenant = 3;
}

message DeleteFileResponse {
  bool success = 1;
  string error_message = 2;
  flare.common.v1.RpcStatus status = 3;
}

message ProcessImageRequest {
  string file_id = 1;
  repeated ImageOperation operations = 2;
  flare.common.v1.RequestContext context = 3;
  flare.common.v1.TenantContext tenant = 4;
}

message ImageOperation {
  oneof operation {
    ResizeOperation resize = 1;
    CompressOperation compress = 2;
    ThumbnailOperation thumbnail = 3;
    WatermarkOperation watermark = 4;
  }
}

message ResizeOperation {
  int32 width = 1;
  int32 height = 2;
  bool keep_aspect_ratio = 3;
}

message CompressOperation {
  int32 quality = 1;
}

message ThumbnailOperation {
  int32 size = 1;
}

message WatermarkOperation {
  string text = 1;
  int32 position = 2;  // WatermarkPosition enum value
}

message ProcessImageResponse {
  string processed_file_id = 1;
  string url = 2;
  string cdn_url = 3;
  bool success = 4;
  string error_message = 5;
  flare.common.v1.RpcStatus status = 6;
}

message ProcessVideoRequest {
  string file_id = 1;
  repeated VideoOperation operations = 2;
  flare.common.v1.RequestContext context = 3;
  flare.common.v1.TenantContext tenant = 4;
}

message VideoOperation {
  oneof operation {
    TranscodeOperation transcode = 1;
    ExtractThumbnailOperation extract_thumbnail = 2;
    CompressVideoOperation compress = 3;
  }
}

message TranscodeOperation {
  string format = 1;
  string quality = 2;
}

message ExtractThumbnailOperation {
  double time = 1;
}

message CompressVideoOperation {
  int32 bitrate = 1;
}

message ProcessVideoResponse {
  string processed_file_id = 1;
  string url = 2;
  string cdn_url = 3;
  bool success = 4;
  string error_message = 5;
  flare.common.v1.RpcStatus status = 6;
}

